trial, added image

--- a/Milestone 1.ipynb
+++ b/Milestone 1.ipynb
@@ -1716,6 +1716,61 @@
   },
   {
    "cell_type": "markdown",
+   "id": "f8ccf148-82f2-44b6-91ec-518b38aaa82f",
+   "metadata": {},
+   "source": [
+    "#### Retrieve Value - Determine the instrumentalness and key of Spotify's most streamed song. Additionally, find the artist(s) responsible for this song and its danceability percentage."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7501cc18-6781-4f8a-a002-3d732f06722c",
+   "metadata": {},
+   "source": [
+    "#### Cluster - Analyze whether there are distinct clusters of songs based on their danceability and energy percentages in relation to their positions on the Spotify charts. Identify the characteristics of songs in each cluster."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f1041e54-34b7-46e0-ab44-21b9186b8e7e",
+   "metadata": {},
+   "source": [
+    "\n",
+    "<img src=\"images/low_fidelity/cluster_1.png\" alt=\"Cluster_1_low_fid\" width=\"600\" height=\"500\">"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9ca4f744-2ecd-4dc2-9830-42a4c7d3afdd",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9ddaa8aa-ac26-4bd5-b009-6f574e3a96f8",
+   "metadata": {},
+   "source": [
+    "#### Correlate - Investigate if there is a correlation between the frequency of songs released (across months and years) and their overall streaming performance. Are certain release times associated with higher streaming numbers?"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "91968c67-4f23-4c5a-a23f-73d1b1199921",
+   "metadata": {},
+   "source": [
+    "#### Compute derived value - Determine the average characteristics of the top and bottom 10 most saved songs on Spotify playlists, calculate the range of contributing artists or the song characteristics."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3ba0486e-5592-449e-8f5e-c42cc1a026df",
+   "metadata": {},
+   "source": [
+    "#### Find Extremum - Identify the artist who has released the most number of songs that have made it to the top 10 on the Apple Music charts. Include information about the number of top 10 songs for each artist and their most successful songs."
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "b5f73c64-f7e9-4a9b-99cb-8724d99e23fc",
    "metadata": {
     "tags": []
@@ -1783,9 +1838,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [conda env:320]",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
-   "name": "conda-env-320-py"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -1797,7 +1852,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.12"
+   "version": "3.11.6"
   }
  },
  "nbformat": 4,
