added analysis of my chosen ones

--- a/Milestone 1.ipynb
+++ b/Milestone 1.ipynb
@@ -1832,13 +1832,11 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "b7269a47-5766-4727-9239-747ef8b473b1",
+   "cell_type": "markdown",
+   "id": "04f3c04e-35b8-4e6c-870d-f18b3dd287b5",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "XXX"
+    "For a visualization to adhere to the effectiveness principle it has to select the most efficient data channels for its data. The chosen visualization does achieve this. Along the horizontal and vertical axis we are plotting quantitative data that is ordered. The best way to visualize this data so that the audience can compare the data is using position on a common scale. This allows the audience to quickly and easily compare data points to see how they differ. Another attribute that is encoded in this visualization is a quantitative attribute that is being sectioned into bins and being treated as an ordinal/categorical attribute (Rank). Color is being used to differentiate between these attributes and one of the most efficient ways to display categorical attributes is color. This visualization also makes use of a few gestalt principles. It uses proximity and similarity in the data points to create connection to see if we can identify any clusters of songs. Since we are comparing data on a common scale it is also using the enclosure/common region gestalt principle. This visualization also has high separability because we can easily tell the difference between the channels that are encoding the data."
    ]
   },
   {
@@ -1980,7 +1978,7 @@
    "id": "cc7444ab-08a2-48e5-9fa6-628085208184",
    "metadata": {},
    "source": [
-    "XXX"
+    "For a visualization to adhere to the effectiveness principle it has to select the most efficient data channels for its data. The chosen visualization does achieve this. Along the horizontal and vertical axis we are plotting quantitative data that is ordered. The best way to visualize this data so that the audience can compare the data is using position on a common scale. This allows the audience to quickly and easily compare data points to see how they differ. Another attribute that is encoded in this visualization is a quantitative attribute that is being sectioned into bins and being treated as a categorical attribute (top and bottom 10 most and least saved songs). Color is being used to differentiate between these attributes and one of the most efficient ways to display categorical attributes is color. By using the distinct colors we can also super impose the two graphs on top of each other and it is easier for the audience to compare the values. One way that this visualization allows for easier analysis by its audience is the tabs to let the audience see the views superimposed on each other or along seperate graphs. This visualization also makes use of a few gestalt principles. It uses connection to see the relationship between different song characteristics. Since we are comparing data on a common scale it is also using the enclosure/common region gestalt principle. This visualization also has high separability because we can easily tell the difference between the channels that are encoding the data."
    ]
   },
   {
